--- a/src/main/resources/in/ingui/javafx/clab_criptomonedas_navegador_web/in.properties
+++ b/src/main/resources/in/ingui/javafx/clab_criptomonedas_navegador_web/in.properties
@@ -17,7 +17,7 @@ Presentando\ fila\ =Presentando fila
 Enviar=Enviar
 Fila\ borrada\ con\ \u00e9xito.\ =Fila borrada con \u00e9xito. 
 CLAB\ Criptomonedas\ navegador\ web=CLAB Criptomonedas navegador web
-\u00bfEst\u00e1\ seguro?\ =\u00bfEst\u00e1 seguro? 
+\u00bfEst\u00e1\ seguro?\ =\u00bfEst\u00e1 seguro de borrar? 
 Operativa\ completada\ con\ \u00e9xito.\ =Operativa completada con \u00e9xito. 
 Actualizar=Actualizar
 Borrar=Borrar
